manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
  labels:
    app: django-app
spec:
  selector:
    app: django-app 
  ports:
    - name: app-listener
      protocol: TCP
      port: 80 #External Port
      targetPort: 8000 #Port in Pod
