manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
  name: dev-ingress
spec:
  rules:
  - host: dev.example.com
    http:
      paths:
      - backend:
          service:
            name: django-app-service
            port:
              number: 80
        path: /
  #tls:
  #- hosts:
  #  - dev.example.com
  #  secretName: dev-tls
